--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section id="about" class="py-5 page-section">
         <div class="container text-center">
-            <h2 class="mb-4">About</h2>
+            <h2 class="mb-4 text-dark">About</h2>
             <img src="Profile Pic.jpg" alt="Profile Picture" class="rounded-circle mb-3" style="width: 150px; height: 150px;">
             <p class="w-75 mx-auto">I am Afnan A., an innovative data professional with a robust background in engineering and neuroscience, adept at leveraging advanced analytical and quantitative research techniques to drive product and service optimization. Skilled in machine learning, statistical modeling, and data analysis.</p>
             <p class="w-75 mx-auto">Passionate about harnessing data-driven insights to drive innovation and maximize value in public health, finance, and startup environments.</p>
@@ -50,7 +50,7 @@
     <!-- Projects Section -->
     <section id="projects" class="py-5 bg-light page-section">
         <div class="container text-center">
-            <h2 class="mb-4">Projects</h2>
+            <h2 class="mb-4 text-dark">Projects</h2>
             <div id="projectsCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -154,13 +154,14 @@
 
     <!-- Skills Section -->
     <section id="skills" class="py-5 page-section">
-        <div class="container text-center">
-            <h2 class="mb-4">Skills</h2>
+        <div class="container text
+                <div class="container text-center">
+            <h2 class="mb-4 text-dark">Skills</h2>
             <div id="skillsCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row">
-                                                        <div class="col-md-3 col-sm-6 mb-4">
+                            <div class="col-md-3 col-sm-6 mb-4">
                                 <div class="card h-100">
                                     <div class="card-header bg-transparent text-center">
                                         <i class="fab fa-python fa-3x skill-icon text-dark-green"></i>
@@ -338,4 +339,3 @@
     </script>
 </body>
 </html>
-
