--- a/index.html
+++ b/index.html
@@ -153,128 +153,129 @@
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="py-5 page-section">
-        <div class="container text
-                <div class="container text-center">
-            <h2 class="mb-4 text-dark">Skills</h2>
-            <div id="skillsCarousel" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <div class="row">
-                            <div class="col-md-3 col-sm-6 mb-4">
-                                <div class="card h-100">
-                                    <div class="card-header bg-transparent text-center">
-                                        <i class="fab fa-python fa-3x skill-icon text-dark-green"></i>
-                                    </div>
-                                    <div class="card-body">
-                                        <h5 class="card-title">Python</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
-                                    </div>
+<section id="skills" class="py-5 page-section">
+    <div class="container text-center">
+        <h2 class="mb-4 text-dark">Skills</h2>
+        <div id="skillsCarousel" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <!-- First Slide -->
+                <div class="carousel-item active">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6 mb-4">
+                            <div class="card h-100">
+                                <div class="card-header bg-transparent text-center">
+                                    <i class="fab fa-python fa-3x skill-icon text-dark-green"></i>
                                 </div>
-                            </div>
-                            <div class="col-md-3 col-sm-6 mb-4">
-                                <div class="card h-100">
-                                    <div class="card-header bg-transparent text-center">
-                                        <i class="fas fa-chart-bar fa-3x skill-icon text-dark-green"></i>
-                                    </div>
-                                    <div class="card-body">
-                                        <h5 class="card-title">Data Visualization</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3 col-sm-6 mb-4">
-                                <div class="card h-100">
-                                    <div class="card-header bg-transparent text-center">
-                                        <i class="fas fa-database fa-3x skill-icon text-dark-green"></i>
-                                    </div>
-                                    <div class="card-body">
-                                        <h5 class="card-title">SQL</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-md-3 col-sm-6 mb-4">
-                                <div class="card h-100">
-                                    <div class="card-header bg-transparent text-center">
-                                        <i class="fas fa-comments fa-3x skill-icon text-dark-green"></i>
-                                    </div>
-                                    <div class="card-body">
-                                        <h5 class="card-title">Data Storytelling</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
-                                    </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Python</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
                                 </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="row">
-                            <div class="col-md-3 col-sm-6 mb-4">
-                                <div class="card h-100">
-                                    <div class="card-header bg-transparent text-center">
-                                        <i class="fas fa-code fa-3x skill-icon text-dark-green"></i>
-                                    </div>
-                                    <div class="card-body">
-                                        <h5 class="card-title">Programming</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
-                                    </div>
+                        <div class="col-md-3 col-sm-6 mb-4">
+                            <div class="card h-100">
+                                <div class="card-header bg-transparent text-center">
+                                    <i class="fas fa-chart-bar fa-3x skill-icon text-dark-green"></i>
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Data Visualization</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-6 mb-4">
-                                <div class="card h-100">
-                                    <div class="card-header bg-transparent text-center">
-                                        <i class="fas fa-network-wired fa-3x skill-icon text-dark-green"></i>
-                                    </div>
-                                    <div class="card-body">
-                                        <h5 class="card-title">Networking</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
-                                    </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 mb-4">
+                            <div class="card h-100">
+                                <div class="card-header bg-transparent text-center">
+                                    <i class="fas fa-database fa-3x skill-icon text-dark-green"></i>
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">SQL</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
                                 </div>
                             </div>
-                            <div class="col-md-3 col-sm-6 mb-4">
-                                <div class="card h-100">
-                                    <div class="card-header bg-transparent text-center">
-                                        <i class="fas fa-chart-pie fa-3x skill-icon text-dark-green"></i>
-                                    </div>
-                                    <div class="card-body">
-                                        <h5 class="card-title">Data Analysis</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
-                                    </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 mb-4">
+                            <div class="card h-100">
+                                <div class="card-header bg-transparent text-center">
+                                    <i class="fas fa-comments fa-3x skill-icon text-dark-green"></i>
                                 </div>
-                            </div>
-                            <div class="col-md-3 col-sm-6 mb-4">
-                                <div class="card h-100">
-                                    <div class="card-header bg-transparent text-center">
-                                        <i class="fas fa-project-diagram fa-3x skill-icon text-dark-green"></i>
-                                    </div>
-                                    <div class="card-body">
-                                        <h5 class="card-title">Project Management</h5>
-                                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
-                                    </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Data Storytelling</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#skillsCarousel" role="button" data-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#skillsCarousel" role="button" data-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="sr-only">Next</span>
-                </a>
+                <!-- Second Slide -->
+                <div class="carousel-item">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-6 mb-4">
+                            <div class="card h-100">
+                                <div class="card-header bg-transparent text-center">
+                                    <i class="fas fa-code fa-3x skill-icon text-dark-green"></i>
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Programming</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 mb-4">
+                            <div class="card h-100">
+                                <div class="card-header bg-transparent text-center">
+                                    <i class="fas fa-network-wired fa-3x skill-icon text-dark-green"></i>
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Networking</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 mb-4">
+                            <div class="card h-100">
+                                <div class="card-header bg-transparent text-center">
+                                    <i class="fas fa-chart-pie fa-3x skill-icon text-dark-green"></i>
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Data Analysis</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-3 col-sm-6 mb-4">
+                            <div class="card h-100">
+                                <div class="card-header bg-transparent text-center">
+                                    <i class="fas fa-project-diagram fa-3x skill-icon text-dark-green"></i>
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Project Management</h5>
+                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                                    <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
+            <a class="carousel-control-prev" href="#skillsCarousel" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#skillsCarousel" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Contact Section -->
     <section id="contact" class="py-5 bg-dark text-white page-section">
