--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
@@ -31,7 +31,7 @@
         </div>
     </nav>
 
-    <header id="home" class="text-center py-5 header-gradient text-white">
+    <header id="home" class="text-center py-5 header-banner text-white">
         <div class="container">
             <h1 class="display-4">Welcome to My Portfolio</h1>
             <p class="lead">Data Analyst / Data Scientist</p>
@@ -158,7 +158,6 @@
             <h2 class="mb-4 text-dark">Skills</h2>
             <div id="skillsCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
-                    <!-- First Slide -->
                     <div class="carousel-item active">
                         <div class="row">
                             <div class="col-md-3 col-sm-6 mb-4">
@@ -211,7 +210,6 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Second Slide -->
                     <div class="carousel-item">
                         <div class="row">
                             <div class="col-md-3 col-sm-6 mb-4">
