--- a/index.html
+++ b/index.html
@@ -41,13 +41,12 @@
     <section id="about" class="py-5 page-section">
         <div class="container text-center">
             <h2 class="mb-4 text-dark">About</h2>
-            <img src="Profile Pic.jpg" alt="Profile Picture" class="rounded-circle mb-3" style="width: 150px; height: 150px;">
+            <img src="images/Profile Pic.jpg" alt="Profile Picture" class="rounded-circle mb-3" style="width: 150px; height: 150px;">
             <p class="w-75 mx-auto">I am Afnan A., an innovative data professional with a robust background in engineering and neuroscience, adept at leveraging advanced analytical and quantitative research techniques to drive product and service optimization. Skilled in machine learning, statistical modeling, and data analysis.</p>
             <p class="w-75 mx-auto">Passionate about harnessing data-driven insights to drive innovation and maximize value in public health, finance, and startup environments.</p>
         </div>
     </section>
 
-    <!-- Projects Section -->
     <section id="projects" class="py-5 bg-light page-section">
         <div class="container text-center">
             <h2 class="mb-4 text-dark">Projects</h2>
@@ -152,7 +151,6 @@
         </div>
     </section>
 
-    <!-- Skills Section -->
     <section id="skills" class="py-5 page-section">
         <div class="container text-center">
             <h2 class="mb-4 text-dark">Skills</h2>
@@ -275,7 +273,6 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
     <section id="contact" class="py-5 bg-dark text-white page-section">
         <div class="container text-center">
             <h2 class="mb-4">Contact Me</h2>
@@ -312,8 +309,8 @@
     </footer>
 
     <script>
-        // Smooth scrolling for navigation links
         $(document).ready(function() {
+            // Smooth scrolling for navigation links
             $("a.nav-link").on('click', function(event) {
                 if (this.hash !== "") {
                     event.preventDefault();
