--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,42 +15,48 @@
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <a class="navbar-brand" href="#">Afnan A.</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-                <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-                <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-            </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">Afnan A.</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                </ul>
+            </div>
         </div>
     </nav>
 
-    <header id="home" class="text-center py-5 header-banner text-white">
-        <div class="container">
+    <!-- Hero Header Section -->
+    <header id="home" class="hero-header d-flex align-items-center text-white">
+        <div class="container text-center">
             <h1 class="display-4">Welcome to My Portfolio</h1>
             <p class="lead">Data Analyst / Data Scientist</p>
         </div>
     </header>
 
+    <!-- About Section -->
     <section id="about" class="py-5 page-section">
         <div class="container text-center">
-            <h2 class="mb-4 text-dark">About</h2>
-            <img src="images/Profile Pic.jpg" alt="Profile Picture" class="rounded-circle mb-3" style="width: 150px; height: 150px;">
+            <h2 class="mb-4">About</h2>
+            <img src="Profile Pic.jpg" alt="Profile Picture" class="rounded-circle mb-3" style="width: 150px; height: 150px;">
             <p class="w-75 mx-auto">I am Afnan A., an innovative data professional with a robust background in engineering and neuroscience, adept at leveraging advanced analytical and quantitative research techniques to drive product and service optimization. Skilled in machine learning, statistical modeling, and data analysis.</p>
             <p class="w-75 mx-auto">Passionate about harnessing data-driven insights to drive innovation and maximize value in public health, finance, and startup environments.</p>
         </div>
     </section>
 
+    <!-- Projects Section -->
     <section id="projects" class="py-5 bg-light page-section">
         <div class="container text-center">
-            <h2 class="mb-4 text-dark">Projects</h2>
+            <h2 class="mb-4">Projects</h2>
             <div id="projectsCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -151,9 +158,10 @@
         </div>
     </section>
 
+    <!-- Skills Section -->
     <section id="skills" class="py-5 page-section">
         <div class="container text-center">
-            <h2 class="mb-4 text-dark">Skills</h2>
+            <h2 class="mb-4">Skills</h2>
             <div id="skillsCarousel" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -273,6 +281,7 @@
         </div>
     </section>
 
+    <!-- Contact Section -->
     <section id="contact" class="py-5 bg-dark text-white page-section">
         <div class="container text-center">
             <h2 class="mb-4">Contact Me</h2>
@@ -309,9 +318,9 @@
     </footer>
 
     <script>
-        $(document).ready(function() {
-            // Smooth scrolling for navigation links
-            $("a.nav-link").on('click', function(event) {
+        // Smooth scrolling for navigation links
+        $(document).ready(function () {
+            $("a.nav-link").on('click', function (event) {
                 if (this.hash !== "") {
                     event.preventDefault();
                     var hash = this.hash;
@@ -322,9 +331,9 @@
             });
 
             // Highlight the active section in the navbar
-            $(window).on('scroll', function() {
+            $(window).on('scroll', function () {
                 var scrollDistance = $(window).scrollTop();
-                $('.page-section').each(function(i) {
+                $('.page-section').each(function (i) {
                     if ($(this).position().top <= scrollDistance + $('.navbar').outerHeight()) {
                         $('.navbar-nav a.nav-link.active').removeClass('active');
                         $('.navbar-nav a.nav-link').eq(i).addClass('active');
@@ -334,4 +343,5 @@
         });
     </script>
 </body>
+
 </html>
