--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -47,7 +46,7 @@
     <section id="about" class="py-5 page-section">
         <div class="container text-center">
             <h2 class="mb-4">About</h2>
-            <img src="Profile Pic.jpg" alt="Profile Picture" class="rounded-circle mb-3" style="width: 150px; height: 150px;">
+            <img src="Profile_Pic.jpg" alt="Profile Picture" class="rounded-circle mb-3" style="width: 150px; height: 150px;">
             <p class="w-75 mx-auto">I am Afnan A., an innovative data professional with a robust background in engineering and neuroscience, adept at leveraging advanced analytical and quantitative research techniques to drive product and service optimization. Skilled in machine learning, statistical modeling, and data analysis.</p>
             <p class="w-75 mx-auto">Passionate about harnessing data-driven insights to drive innovation and maximize value in public health, finance, and startup environments.</p>
         </div>
@@ -58,6 +57,10 @@
         <div class="container text-center">
             <h2 class="mb-4">Projects</h2>
             <div id="projectsCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#projectsCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#projectsCarousel" data-slide-to="1"></li>
+                </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row">
@@ -163,6 +166,10 @@
         <div class="container text-center">
             <h2 class="mb-4">Skills</h2>
             <div id="skillsCarousel" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#skillsCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#skillsCarousel" data-slide-to="1"></li>
+                </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="row">
@@ -343,5 +350,4 @@
         });
     </script>
 </body>
-
 </html>
