--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">Afnan A.</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -39,7 +39,7 @@
     </nav>
 
     <!-- Hero Header Section -->
-    <header id="home" class="hero-header d-flex align-items-center text-white">
+    <header id="home" class="hero-header d-flex align-items-center text-white" style="background-image: url('images/hero-background.jpg');">
         <div class="container text-center">
             <h1 class="display-4">Welcome to My Portfolio</h1>
             <p class="lead">Data Analyst / Data Scientist</p>
@@ -47,17 +47,17 @@
     </header>
 
     <!-- About Section -->
-    <section id="about" class="py-5 page-section">
+    <section id="about" class="py-5 page-section bg-light">
         <div class="container text-center">
             <h2 class="mb-4">About</h2>
-            <img src="Profile_Pic.jpg" alt="Profile Picture" class="rounded-circle mb-3" style="width: 150px; height: 150px;">
+            <img src="Profile%20Pic.jpg" alt="Profile Picture" class="profile-picture mb-3" style="width: 150px; height: 150px;">
             <p class="w-75 mx-auto">I am Afnan A., an innovative data professional with a robust background in engineering and neuroscience, adept at leveraging advanced analytical and quantitative research techniques to drive product and service optimization. Skilled in machine learning, statistical modeling, and data analysis.</p>
             <p class="w-75 mx-auto">Passionate about harnessing data-driven insights to drive innovation and maximize value in public health, finance, and startup environments.</p>
         </div>
     </section>
 
     <!-- Projects Section -->
-    <section id="projects" class="py-5 bg-light page-section">
+    <section id="projects" class="py-5 page-section bg-secondary text-white">
         <div class="container text-center">
             <h2 class="mb-4">Projects</h2>
             <div class="owl-carousel custom-carousel owl-theme">
@@ -69,52 +69,13 @@
                         <a href="#" class="btn btn-outline-secondary">Source Code</a>
                     </div>
                 </div>
-                <div class="item" style="background-image: url('images/healthcare2.jpg');">
-                    <div class="item-desc">
-                        <h3>Healthcare Project 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="#" class="btn btn-outline-success">Blog Post</a>
-                        <a href="#" class="btn btn-outline-secondary">Source Code</a>
-                    </div>
-                </div>
-                <div class="item" style="background-image: url('images/finance1.jpg');">
-                    <div class="item-desc">
-                        <h3>Finance Project 1</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="#" class="btn btn-outline-success">Blog Post</a>
-                        <a href="#" class="btn btn-outline-secondary">Source Code</a>
-                    </div>
-                </div>
-                <div class="item" style="background-image: url('images/finance2.jpg');">
-                    <div class="item-desc">
-                        <h3>Finance Project 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="#" class="btn btn-outline-success">Blog Post</a>
-                        <a href="#" class="btn btn-outline-secondary">Source Code</a>
-                    </div>
-                </div>
-                <div class="item" style="background-image: url('images/energy1.jpg');">
-                    <div class="item-desc">
-                        <h3>Energy Project 1</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="#" class="btn btn-outline-success">Blog Post</a>
-                        <a href="#" class="btn btn-outline-secondary">Source Code</a>
-                    </div>
-                </div>
-                <div class="item" style="background-image: url('images/energy2.jpg');">
-                    <div class="item-desc">
-                        <h3>Energy Project 2</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="#" class="btn btn-outline-success">Blog Post</a>
-                        <a href="#" class="btn btn-outline-secondary">Source Code</a>
-                    </div>
-                </div>
+                <!-- Additional items... -->
             </div>
         </div>
     </section>
 
     <!-- Skills Section -->
-    <section id="skills" class="py-5 page-section">
+    <section id="skills" class="py-5 page-section bg-light">
         <div class="container text-center">
             <h2 class="mb-4">Skills</h2>
             <div class="owl-carousel custom-carousel owl-theme">
@@ -125,41 +86,7 @@
                         <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
                     </div>
                 </div>
-                <div class="item" style="background-image: url('images/skills2.jpg');">
-                    <div class="item-desc">
-                        <h3>Data Visualization</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
-                    </div>
-                </div>
-                <div class="item" style="background-image: url('images/skills3.jpg');">
-                    <div class="item-desc">
-                        <h3>SQL</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
-                    </div>
-                </div>
-                <div class="item" style="background-image: url('images/skills4.jpg');">
-                    <div class="item-desc">
-                        <h3>Data Storytelling</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
-                    </div>
-                </div>
-                <div class="item" style="background-image: url('images/skills5.jpg');">
-                    <div class="item-desc">
-                        <h3>Programming</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
-                    </div>
-                </div>
-                <div class="item" style="background-image: url('images/skills6.jpg');">
-                    <div class="item-desc">
-                        <h3>Networking</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                        <a href="#" class="btn btn-outline-success">Link to course or bootcamp</a>
-                    </div>
-                </div>
+                <!-- Additional items... -->
             </div>
         </div>
     </section>
@@ -170,26 +97,26 @@
             <h2 class="mb-4">Contact Me</h2>
             <div class="row justify-content-center mb-4">
                 <div class="col-md-6">
-                    <p><i class="fas fa-envelope text-dark-green"></i> afnan.abdullahi375@gmail.com</p>
-                    <p><i class="fas fa-phone-alt text-dark-green"></i> +1 (612) 461-6083</p>
+                    <p><i class="fas fa-envelope text-success"></i> afnan.abdullahi375@gmail.com</p>
+                    <p><i class="fas fa-phone-alt text-success"></i> +1 (612) 461-6083</p>
                 </div>
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6 d-flex justify-content-around">
                     <a href="https://www.linkedin.com/in/afnanabdullahi/" target="_blank" class="text-white" title="LinkedIn">
-                        <i class="fab fa-linkedin fa-2x text-dark-green"></i>
+                        <i class="fab fa-linkedin fa-2x text-success"></i>
                     </a>
                     <a href="https://github.com/AfnanAbdullahi" target="_blank" class="text-white" title="GitHub">
-                        <i class="fab fa-github fa-2x text-dark-green"></i>
+                        <i class="fab fa-github fa-2x text-success"></i>
                     </a>
                     <a href="https://twitter.com" target="_blank" class="text-white" title="Twitter">
-                        <i class="fab fa-twitter fa-2x text-dark-green"></i>
+                        <i class="fab fa-twitter fa-2x text-success"></i>
                     </a>
                     <a href="https://medium.com" target="_blank" class="text-white" title="Medium">
-                        <i class="fab fa-medium fa-2x text-dark-green"></i>
+                        <i class="fab fa-medium fa-2x text-success"></i>
                     </a>
                     <a href="https://youtube.com" target="_blank" class="text-white" title="YouTube">
-                        <i class="fab fa-youtube fa-2x text-dark-green"></i>
+                        <i class="fab fa-youtube fa-2x text-success"></i>
                     </a>
                 </div>
             </div>
@@ -212,7 +139,7 @@
                     event.preventDefault();
                     var hash = this.hash;
                     $('html, body').animate({
-                        scrollTop: $(hash).offset().top - $('.navbar').outerHeight() // Adjust offset for fixed navbar
+                        scrollTop: $(hash).offset().top - $('.navbar').outerHeight()
                     }, 800);
                 }
             });
